--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "timedinput"
-version = "0.1.0"
+version = "0.1.1"
 description = "Timeout for python inputs"
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -14,6 +14,11 @@ authors = [
 keywords = ['input', 'stdin', 'timeout', 'console']
 classifiers = [
     'Programming Language :: Python :: 3',
+    'Programming Language :: Python :: 3.11',
+    'Programming Language :: Python :: 3.10',
+    'Programming Language :: Python :: 3.9',
+    'Programming Language :: Python :: 3.8',
+    'Programming Language :: Python :: 3.7',
     'Intended Audience :: Developers',
     'Environment :: Console',
     'Topic :: Software Development :: Libraries :: Python Modules',
